<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="representatives">Representatives</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="follow_election">Follow Election</string>
    <string name="unfollow_election">Unfollow Election</string>
    <string name="election_information">Election Information</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="my_representatives">My Representatives</string>
    <string name="find_my_representatives">Find My Representatives</string>
    <string name="use_my_location">Use My Location</string>
    <string name="representative_search">Representative Search</string>
    <string name="location_required_error">Location services must be enabled for this app.</string>
    <string name="settings">Settings</string>
    <!-- TODO: Add necessary string values -->

</resources>
