<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- TODO: Add data binding node for Voter Info ViewModel -->
    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <!-- TODO: Add title to toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:singleLine="true"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@{viewModel.selectedElection.name}"/>

        <!-- TODO: Add visual styling -->
        <TextView
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginEnd="@dimen/spacing_normal"
            android:id="@+id/election_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/election_name"
            android:text="@{viewModel.selectedElection.electionDay.toString()}"
            tools:text="12 November 2055" />

        <!-- TODO: Add visual styling and content -->
        <TextView
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/election_information"
            android:id="@+id/state_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/election_date"
            app:layout_constraintStart_toStartOf="@id/election_date" />

        <!-- TODO: Add click binding to open web URL -->
        <!-- TODO: Add visual styling and content -->
        <TextView
            android:layout_marginTop="8dp"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/colorAccent"
            android:text="@string/voting_locations"
            android:id="@+id/state_locations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/state_header"
            app:layout_constraintStart_toStartOf="@id/election_date"
            android:onClick="@{()->viewModel.clickUrl(viewModel.votingLocationFinderUrl)}"/>

        <!-- TODO: Add click binding to open web URL -->
        <!-- TODO: Add visual styling and content -->
        <TextView
            android:layout_marginTop="8dp"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/colorAccent"
            android:text="@string/ballot_information"
            android:id="@+id/state_ballot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/state_locations"
            app:layout_constraintStart_toStartOf="@id/election_date"
            android:onClick="@{()->viewModel.clickUrl(viewModel.ballotInfoUrl)}"/>

        <androidx.constraintlayout.widget.Group
            android:visibility="gone"
            android:id="@+id/address_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="state_correspondence_header,address" />

        <!-- TODO: Add visual styling and content -->
        <TextView
            android:text="State Correspondance"
            android:id="@+id/state_correspondence_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/state_ballot"
            app:layout_constraintStart_toStartOf="@id/election_date" />

        <!-- TODO: Add data binding -->
        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header"
            app:layout_constraintStart_toStartOf="@id/election_date"
            android:text="@{viewModel.correspondence.toString()}"
            />

        <!-- TODO: Add button to save election to Room -->
        <Button
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginEnd="@dimen/spacing_normal"
            android:id="@+id/button_save_election"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/follow_election"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            android:onClick="@{()->viewModel.onClick()}"
            app:textDisplayed="@{viewModel.electionSaved}"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>